<resources>
    <string name="photoeditor_name">Photo Studio</string>
    <string name="loading_failure">Cannot load the photo.</string>
    <string name="saving_failure">Cannot save the photo.</string>
    <string name="photo_saved">Photo saved to %s album.</string>
    <string name="edited_photo_bucket_name">Edited</string>
    <string name="save_photo">Save edited photo?</string>
    <string name="discard_unsaved_photo">Discard unsaved changes?</string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
    <string name="save">SAVE</string>
    <string name="autofix">Auto-correct</string>
    <string name="crop">Crop</string>
    <string name="crossprocess">Cross-process</string>
    <string name="documentary">Documentary</string>
    <string name="doodle">Doodle</string>
    <string name="duotone">Duotone</string>
    <string name="facelift">Face Glow</string>
    <string name="facetan">Face Tan</string>
    <string name="filllight">Fill light</string>
    <string name="fisheye">Fisheye</string>
    <string name="flip">Flip</string>
    <string name="grain">Film grain</string>
    <string name="grayscale">B&amp;W</string>
    <string name="highlight">Highlights</string>
    <string name="lomoish">Lomo</string>
    <string name="negative">Negative</string>
    <string name="posterize">Posterize</string>
    <string name="redeye">Red eye</string>
    <string name="rotate">Rotate</string>
    <string name="saturation">Saturation</string>
    <string name="sepia">Sepia</string>
    <string name="shadow">Shadows</string>
    <string name="sharpen">Sharpen</string>
    <string name="straighten">Straighten</string>
    <string name="temperature">Warmth</string>
    <string name="tint">Tint</string>
    <string name="vignette">Vignette</string>
    <string name="crop_tooltip">Drag the markers to crop photo.</string>
    <string name="doodle_tooltip">Draw on the photo to doodle.</string>
    <string name="flip_tooltip">Drag the photo to flip it.</string>
    <string name="redeye_tooltip">Touch to remove red eye.</string>
    <string name="rotate_tooltip">Drag the photo to rotate it.</string>
    <string name="straighten_tooltip">Drag the photo to straighten it.</string>
    <string name="app_name">Gallery</string>
    <string name="storage_title">No storage devices</string>
    <string name="storage_alert">No external storage devices found.</string>
    <string name="year_unit">" "</string>
    <string name="day_unit">" "</string>
    <string name="gadget_title">Picture frame</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="movie_view_label">Movies</string>
    <string name="loading_video">Loading video…</string>
    <string name="loading_image">Loading image…</string>
    <string name="loading_account">Loading account…</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="resume_playing_message">Resume playing from %s ?</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="loading">Loading...</string>
    <string name="fail_to_load">"Couldn't load"</string>
    <string name="no_thumbnail">No thumbnail</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="camera">Camera</string>
    <string name="crop_save_text">Save</string>
    <string name="crop_discard_text">Discard</string>
    <string name="multiface_crop_help">Tap a face to begin.</string>
    <string name="saving_image">Saving picture…</string>
    <string name="save_error">"Couldn't save cropped image."</string>
    <string name="crop_label">Crop picture</string>
    <string name="running_face_detection">Please wait…</string>
    <string name="select_image">Select photo</string>
    <string name="select_video">Select video</string>
    <string name="select_item">Select item</string>
    <string name="select_album">Select album</string>
    <string name="select_group">Select group</string>
    <string name="set_image">Set picture as</string>
    <string name="wallpaper">Setting wallpaper, please wait…</string>
    <string name="camera_setas_wallpaper">Wallpaper</string>
    <string name="details_ok">OK</string>
    <string name="loading_new">Loading new albums and photos</string>
    <string name="initializing">Loading</string>
    <string name="pick_prompt">Pick an item from your collection</string>
    <string name="no_items">There are no items in your collection</string>
    <string name="pick">Pick</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="cancel">No</string>
    <string name="share">Share</string>
    <string name="no_sd_card">SD card unmounted or not present.</string>
    <string name="no_usb_storage">USB storage unmounted</string>
    <string name="more">More</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="slideshow">Slideshow</string>
    <string name="menu">Menu</string>
    <string name="details">Details</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="close">Close</string>
    <string name="switch_to_camera">Switch to Camera</string>
    <string name="album_selected">album selected</string>
    <string name="item_selected">item selected</string>
    <string name="albums_selected">albums selected</string>
    <string name="items_selected">items selected</string>
    <string name="album">Album</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="location_unknown">Unknown location</string>
    <string name="type">Type</string>
    <string name="taken_on">Taken on</string>
    <string name="added_on">Added on</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="no_such_item">"Couldn't find item."</string>
    <string name="edit">Edit</string>
    <string name="activity_not_found">No app is available to complete the action.</string>
    <string name="process_caching_requests">Processing caching requests</string>
    <string name="caching_label">Caching…</string>
    <string name="crop_action">Crop</string>
    <string name="set_as">Set as</string>
    <string name="video_err">"Can't play video."</string>
    <string name="group_by_location">By location</string>
    <string name="group_by_time">By time</string>
    <string name="group_by_tags">By tags</string>
    <string name="group_by_faces">By people</string>
    <string name="group_by_album">By album</string>
    <string name="group_by_size">By size</string>
    <string name="untagged">Untagged</string>
    <string name="no_location">No location</string>
    <string name="no_connectivity">"Some locations couldn't be identified due to network problems."</string>
    <string name="sync_album_error">Failed to download the photos in this album. Please retry later.</string>
    <string name="sync_album_set_error">Failed to download the list of albums. Please retry later.</string>
    <string name="show_images_only">Images only</string>
    <string name="show_videos_only">Videos only</string>
    <string name="show_all">Images and videos</string>
    <string name="appwidget_title">Gallery</string>
    <string name="appwidget_empty_text">No photos</string>
    <string name="crop_saved">Cropped image saved to Downloads.</string>
    <string name="crop_not_saved">"Cropped image wasn't saved."</string>
    <string name="no_albums_alert">No albums available.</string>
    <string name="empty_album">O images/videos available.</string>
    <string name="picasa_posts">Posts</string>
    <string name="make_available_offline">Make available offline</string>
    <string name="sync_picasa_albums">Refresh</string>
    <string name="done">Done</string>
    <string name="sequence_in_set">%1$d of %2$d items:</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="path">Path</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="orientation">Orientation</string>
    <string name="duration">Duration</string>
    <string name="mimetype">MIME type</string>
    <string name="file_size">File size</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="flash">Flash</string>
    <string name="aperture">Aperture</string>
    <string name="focal_length">Focal Length</string>
    <string name="white_balance">White balance</string>
    <string name="exposure_time">Exposure time</string>
    <string name="iso">ISO</string>
    <string name="unit_mm">mm</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="flash_on">Flash fired</string>
    <string name="flash_off">No flash</string>
    <string name="try_to_set_local_album_available_offline">This item is stored locally and available offline.</string>
    <string name="set_label_all_albums">All albums</string>
    <string name="set_label_local_albums">Local albums</string>
    <string name="set_label_mtp_devices">MTP devices</string>
    <string name="set_label_picasa_albums">Picasa albums</string>
    <string name="free_space_format">%s free</string>
    <string name="size_below">%1$s or below</string>
    <string name="size_above">%1$s or above</string>
    <string name="size_between">%1$s to %2$s</string>
    <string name="Import">Import</string>
    <string name="import_complete">Import complete</string>
    <string name="import_fail">Import unsuccessful</string>
    <string name="camera_connected">Camera connected.</string>
    <string name="camera_disconnected">Camera disconnected.</string>
    <string name="click_import">Touch here to import</string>
    <string name="widget_type_album">Choose an album</string>
    <string name="widget_type_shuffle">Shuffle all images</string>
    <string name="widget_type_photo">Choose an image</string>
    <string name="widget_type">Choose images</string>
    <string name="slideshow_dream_name">Slideshow</string>
    <string name="albums">Albums</string>
    <string name="times">Times</string>
    <string name="locations">Locations</string>
    <string name="people">People</string>
    <string name="tags">Tags</string>
    <string name="group_by">Group by</string>
    <string name="settings">Settings</string>
    <string name="add_account">Add account</string>
    <string name="play_all">Play All</string>
    <string name="play_all_1">Once</string>
    <string name="play_all_5">5 Times</string>
    <string name="play_all_20">20 Times</string>
    <string name="play_all_50">50 Times</string>
    <string name="play_all_100">100 Times</string>
    <string name="play_all_1000">1000 Times</string>
    <string name="play_all_3000">3000 Times</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="item">item</string>
    <string name="items">items</string>
    <string name="around">Around</string>
    <string name="date_unknown">Date unknown</string>
    <string name="drm_ro_forward">Forwarding</string>
    <string name="drm_ro_can_forward">Can be forwarded</string>
    <string name="drm_ro_can_not_forward">Can not be forwarded</string>
    <string name="drm_ro_license_num">License number</string>
    <string name="drm_ro_license_status">License status</string>
    <string name="drm_ro_license_valid">Valid</string>
    <string name="drm_ro_license_invalid">Invalid</string>
    <string name="drm_ro_operation_type">Operation type</string>
    <string name="drm_ro_operation_display">Display</string>
    <string name="drm_ro_operation_play">Play</string>
</resources>