<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/action_advanced_options" android:title="@string/play_all" android:showAsAction="always|withText">
        <menu>
            <item android:id="@id/action_play_all_1" android:title="@string/play_all_1" android:checkable="false" />
            <item android:id="@id/action_play_all_5" android:title="@string/play_all_5" android:checkable="false" />
            <item android:id="@id/action_play_all_20" android:title="@string/play_all_20" android:checkable="false" />
            <item android:id="@id/action_play_all_50" android:title="@string/play_all_50" android:checkable="false" />
            <item android:id="@id/action_play_all_100" android:title="@string/play_all_100" android:checkable="false" />
            <item android:id="@id/action_play_all_1000" android:title="@string/play_all_1000" android:checkable="false" />
            <item android:id="@id/action_play_all_3000" android:title="@string/play_all_3000" android:checkable="false" />
        </menu>
    </item>
    <item android:icon="@drawable/ic_menu_camera_holo_light" android:id="@id/action_camera" android:title="@string/switch_to_camera" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_slideshow_holo_light" android:id="@id/action_slideshow" android:title="@string/slideshow" android:showAsAction="ifRoom" />
    <item android:id="@id/action_select" android:title="@string/select_item" android:showAsAction="never" />
    <item android:id="@id/action_group_by" android:title="@string/group_by" android:showAsAction="never" />
</menu>
